Fix toggle in dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,18 @@
 }
 
 @media (prefers-color-scheme: dark) {
+    :root {
+        --f7-theme-color: #007bff !important;
+    }
+
+    input[type=checkbox]:not(:checked) + .toggle-icon {
+        background: #39393e !important;
+    }
+
+    input[type=checkbox]:not(:checked) + .toggle-icon:before {
+        background: #39393e !important;
+    }
+
     .sp-header {
         background: #383837 !important;
         color: #b1b1b0 !important;
